generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider  = "postgresql"
  url       = env("DATABASE_URL")
  directUrl = env("DIRECT_URL")
}

model User {
  id            String   @id @default(cuid())
  email         String   @unique
  passwordHash  String
  emailVerified Boolean  @default(false)
  createdAt     DateTime @default(now())
  updatedAt     DateTime @updatedAt

  player Player?
}

model Player {
  playerId          String   @id @default(cuid())
  userId            String   @unique
  user              User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  playerName        String   @default("勇者")
  tutorialCompleted Boolean  @default(false)
  playerRank        Int      @default(1)
  stamina           Int      @default(50)
  maxStamina        Int      @default(50)
  gold              Int      @default(5000)
  diamond           Int      @default(500)
  exp               Int      @default(0)
  title             String?
  bio               String?
  favoriteUnitId    String?
  loginDays         Int      @default(1)
  lastLoginAt       DateTime @default(now())
  createdAt         DateTime @default(now())
  updatedAt         DateTime @updatedAt

  // 新フィールド（gameStateJson の代替）
  staminaRecoveryTime BigInt   @default(0)  // Unix ms
  arcanaPlayerId      String   @default("")  // ARC-xxxxx形式
  miscData            Json     @default("{}")  // awakeningCrystals等

  ownedUnits      OwnedUnit[]
  playerItems     PlayerItem[]
  summonHistory   SummonHistory[]
  ownedEquipments OwnedEquipment[]
  questProgress   PlayerQuestProgress?
  parties         PlayerParty[]
  missionProgress PlayerMissionProgress?
  loginBonus      PlayerLoginBonus?
  arenaRecord     PlayerArenaRecord?

  @@index([userId])
}

model OwnedUnit {
  instanceId     String  @id   // フロントエンド生成ID
  playerId       String
  player         Player  @relation(fields: [playerId], references: [playerId], onDelete: Cascade)
  masterId       String
  level          Int     @default(1)
  exp            Int     @default(0)
  awakenRank     Int     @default(0)
  awakeningCount Int     @default(0)
  currentRarity  String  @default("1")
  isLocked       Boolean @default(false)
  acquiredAt     BigInt  @default(0)  // Unix ms

  @@index([playerId])
}

model OwnedEquipment {
  instanceId String  @id    // フロントエンド生成ID
  playerId   String
  player     Player  @relation(fields: [playerId], references: [playerId], onDelete: Cascade)
  masterId   String
  level      Int     @default(1)
  exp        Int     @default(0)
  equippedTo String?

  @@index([playerId])
}

model PlayerItem {
  id       String @id @default(cuid())
  playerId String
  player   Player @relation(fields: [playerId], references: [playerId], onDelete: Cascade)
  itemId   String
  quantity Int    @default(0)

  @@unique([playerId, itemId])
  @@index([playerId])
}

model SummonHistory {
  id         String   @id @default(cuid())
  playerId   String
  player     Player   @relation(fields: [playerId], references: [playerId], onDelete: Cascade)
  poolId     String
  masterId   String
  rarity     String
  resultType String   @default("new")
  pulledAt   DateTime @default(now())

  @@index([playerId])
}

model PlayerQuestProgress {
  playerId            String   @id
  player              Player   @relation(fields: [playerId], references: [playerId], onDelete: Cascade)
  clearedStageIds     String[] @default([])
  claimedAreaRewards  String[] @default([])
  lastSelectedWorldId String?
  updatedAt           DateTime @updatedAt
}

model PlayerParty {
  id       String  @id @default(cuid())
  playerId String
  player   Player  @relation(fields: [playerId], references: [playerId], onDelete: Cascade)
  partyId  String
  name     String  @default("パーティ")
  slots    Json    @default("[]")  // (string | null)[] unitInstanceId or null
  leaderId String?
  isActive Boolean @default(false)

  @@unique([playerId, partyId])
  @@index([playerId])
}

model PlayerMissionProgress {
  playerId   String   @id
  player     Player   @relation(fields: [playerId], references: [playerId], onDelete: Cascade)
  dailyDate  String   @default("")
  dailyData  Json     @default("[]")
  weeklyData Json     @default("[]")
  weekStr    String   @default("")
  updatedAt  DateTime @updatedAt
}

model PlayerLoginBonus {
  playerId        String   @id
  player          Player   @relation(fields: [playerId], references: [playerId], onDelete: Cascade)
  lastClaimedDate String?
  lastLoginDate   String?
  claimedDays     Int[]    @default([])
  currentDay      Int      @default(1)
  updatedAt       DateTime @updatedAt
}

model PlayerArenaRecord {
  playerId      String   @id
  player        Player   @relation(fields: [playerId], references: [playerId], onDelete: Cascade)
  wins          Int      @default(0)
  losses        Int      @default(0)
  rank          Int      @default(999)
  points        Int      @default(1000)
  season        Int      @default(1)
  battleHistory Json     @default("[]")
  updatedAt     DateTime @updatedAt
}

// マスタデータをDB管理するためのテーブル。idはデータ種別('units','enemies','items','equipment','quests')
model MasterData {
  id        String   @id  // 'units' | 'enemies' | 'items' | 'equipment' | 'quests'
  payload   Json
  version   Int      @default(1)
  updatedAt DateTime @updatedAt
}
